--- a/TowerDefense/Maps/TestMap.xaml
+++ b/TowerDefense/Maps/TestMap.xaml
@@ -1,14 +1,14 @@
 ﻿<UserControl x:Class="TowerDefense.Maps.TestMap"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:TowerDefense.Maps"
-        mc:Ignorable="d"
-        Height="1080" Width="1440">
-    <Grid>
-        <Rectangle Fill="White" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:local="clr-namespace:TowerDefense.Maps"
+             mc:Ignorable="d"
+             Width="1440" Height="1080">
+    <Canvas x:Name="GameCanvas">
+        <Rectangle Fill="Red" Width="1440" Height="1080"/>
         <Line x:Name="Line1" X1="50" Y1="540" X2="700" Y2="540" Stroke="Black" StrokeThickness="2" />
         <Line x:Name="Line2" X1="700" Y1="540" X2="700" Y2="100" Stroke="Black" StrokeThickness="2" />
-    </Grid>
+    </Canvas>
 </UserControl>
